- contacts - margin overflow fix

--- a/source/sass/base/base.scss
+++ b/source/sass/base/base.scss
@@ -1,20 +1,9 @@
-html {
+body {
   position: relative;
 
-  margin: 0;
-  padding: 0;
+  max-width: 1150px;
 
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
-}
-
-body {
-  min-width: 100%;
-  max-width: 100%;
-  width: 100%;
-
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 
   display: flex;
