--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -19,7 +19,7 @@
 }
 
 .contacts__table {
-  margin: 30px 29px 8px 29px;
+  margin: 30px 0 8px 29px;
   border-collapse: collapse;
 }
 
